force-app/main/default/objects/PrioridadeMalha__c/PrioridadeMalha__c.object-meta.xml
<CustomObject>
    <label>Prioridade da Malha</label>
    <nameField>
        <displayFormat>PRIO-{0000000}</displayFormat>
        <label>Prioridade da Malha</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prioridades da Malha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>