force-app/main/default/objects/PrioridadeMalha__c/fields/Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Aeronave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aeronave</label>
    <referenceTo>Aeronave__c</referenceTo>
    <relationshipLabel>Prioridades da Malha</relationshipLabel>
    <relationshipName>PrioridadesMalha</relationshipName>
    <type>Lookup</type>
</CustomField>