force-app/main/default/objects/PrioridadeMalha__c/fields/MalhaVoo__c.field-meta.xml
<CustomField>
    <fullName>MalhaVoo__c</fullName>
    <label>Malha de Voo</label>
    <referenceTo>MalhaVoo__c</referenceTo>
    <relationshipLabel>Prioridades da Malha</relationshipLabel>
    <relationshipName>PrioridadesMalha</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>