force-app/main/default/objects/PrioridadeMalha__c/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <label>Prioridade</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>